EWPP-129: Update translation of strings.

--- a/translations/oe_corporate_blocks-es.po
+++ b/translations/oe_corporate_blocks-es.po
@@ -97,38 +97,35 @@ msgstr "Supervisor Europeo de Protección de Datos (SEPD)"
 msgid "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=en"
 msgstr "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=el"
 
-msgid "Sitemap"
-msgstr "Mapa del sitio"
-
-msgid "/european-union/abouteuropa/sitemap_en"
-msgstr "/european-union/abouteuropa/sitemap_es"
-
 msgid "About this site"
 msgstr "Sobre este sitio"
 
-msgid "/european-union/abouteuropa_en"
-msgstr "/european-union/abouteuropa_es"
+msgid "https://europa.eu/european-union/abouteuropa_en"
+msgstr "https://europa.eu/european-union/abouteuropa_es"
 
 msgid "Language policy"
 msgstr "Política lingüística"
 
-msgid "/european-union/abouteuropa/language-policy_en"
-msgstr "/european-union/abouteuropa/language-policy_es"
+msgid "https://europa.eu/european-union/abouteuropa/language-policy_en"
+msgstr "https://europa.eu/european-union/abouteuropa/language-policy_es"
 
 msgid "Privacy policy"
 msgstr "Política de privacidad"
 
-msgid "/european-union/abouteuropa/privacy-policy_en"
-msgstr "/european-union/abouteuropa/privacy-policy_es"
+msgid "https://europa.eu/european-union/abouteuropa/privacy-policy_en"
+msgstr "https://europa.eu/european-union/abouteuropa/privacy-policy_es"
 
 msgid "Legal notice"
 msgstr "Aviso jurídico"
 
-msgid "/european-union/abouteuropa/legal_notices_en"
-msgstr "/european-union/abouteuropa/legal_notices_es"
+msgid "https://europa.eu/european-union/abouteuropa/legal_notices_en"
+msgstr "https://europa.eu/european-union/abouteuropa/legal_notices_es"
 
-msgid "/european-union/abouteuropa/cookies_en"
-msgstr "/european-union/abouteuropa/cookies_es"
+msgid "https://europa.eu/european-union/brexit-content-disclaimer_en"
+msgstr "https://europa.eu/european-union/brexit-content-disclaimer_es"
+
+msgid "https://europa.eu/european-union/abouteuropa/cookies_en"
+msgstr "https://europa.eu/european-union/abouteuropa/cookies_es"
 
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_es"
@@ -136,41 +133,131 @@ msgstr "https://ec.europa.eu/info/index_es"
 msgid "European Commission website"
 msgstr "Sitio web de la Comisión Europea"
 
-msgid "Follow the European Commission"
-msgstr "Seguir a la Comisión Europea"
+msgid "This site is managed by the Directorate-General for Communication"
+msgstr "Gestionada por la Dirección General de Comunicación"
+
+msgid "https://ec.europa.eu/info/strategy_en"
+msgstr "https://ec.europa.eu/info/strategy_es"
+
+msgid "Strategy"
+msgstr "Estrategia"
+
+msgid "https://ec.europa.eu/info/about-european-commission_en"
+msgstr "https://ec.europa.eu/info/about-european-commission_es"
+
+msgid "About the European Commission"
+msgstr "Sobre la Comisión Europea"
+
+msgid "https://ec.europa.eu/info/business-economy-euro_en"
+msgstr "https://ec.europa.eu/info/business-economy-euro_es"
+
+msgid "Business, Economy, Euro"
+msgstr "Empresa, economía, euro"
+
+msgid "https://ec.europa.eu/info/live-work-travel-eu_en"
+msgstr "https://ec.europa.eu/info/live-work-travel-eu_es"
+
+msgid "Live, work, travel in the EU"
+msgstr "Vivir, trabajar y viajar en la UE"
+
+msgid "https://ec.europa.eu/info/law_en"
+msgstr "https://ec.europa.eu/info/law_es"
+
+msgid "Law"
+msgstr "Legislación"
+
+msgid "https://ec.europa.eu/info/funding-tenders_en"
+msgstr "https://ec.europa.eu/info/funding-tenders_es"
+
+msgid "Funding, Tenders"
+msgstr "Financiación, licitaciones"
+
+msgid "https://ec.europa.eu/info/research-and-innovation_en"
+msgstr "https://ec.europa.eu/info/research-and-innovation_es"
+
+msgid "Research and innovation"
+msgstr "Investigación e innovación"
+
+msgid "https://ec.europa.eu/info/energy-climate-change-environment_en"
+msgstr "https://ec.europa.eu/info/energy-climate-change-environment_es"
+
+msgid "Energy, Climate change, Environment"
+msgstr "Energía, Cambio climático, Medio ambiente"
+
+msgid "https://ec.europa.eu/info/education_en"
+msgstr "https://ec.europa.eu/info/education_es"
+
+msgid "Education"
+msgstr "Educación"
+
+msgid "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_en"
+msgstr "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_es"
+
+msgid "Aid, Development cooperation, Fundamental rights"
+msgstr "Ayuda, Cooperación al desarrollo, Derechos fundamentales"
+
+msgid "https://ec.europa.eu/info/food-farming-fisheries_en"
+msgstr "https://ec.europa.eu/info/food-farming-fisheries_es"
+
+msgid "Food, Farming, Fisheries"
+msgstr "Alimentos, agricultura, pesca"
+
+msgid "https://ec.europa.eu/info/eu-regional-and-urban-development_en"
+msgstr "https://ec.europa.eu/info/eu-regional-and-urban-development_es"
+
+msgid "EU regional and urban development"
+msgstr "Desarrollo regional y urbano de la UE"
+
+msgid "https://ec.europa.eu/info/jobs-european-commission_en"
+msgstr "https://ec.europa.eu/info/jobs-european-commission_es"
+
+msgid "Jobs at the European Commission"
+msgstr "Trabajar en la Comisión Europea"
+
+msgid "https://ec.europa.eu/info/statistics_en"
+msgstr "https://ec.europa.eu/info/statistics_es"
+
+msgid "Statistics"
+msgstr "Estadísticas"
+
+msgid "https://ec.europa.eu/commission/presscorner/home/en"
+msgstr "https://ec.europa.eu/commission/presscorner/home/es"
+
+msgid "News"
+msgstr "Noticias"
+
+msgid "https://ec.europa.eu/info/events_en"
+msgstr "https://ec.europa.eu/info/events_es"
+
+msgid "Events"
+msgstr "Actos"
+
+msgid "https://ec.europa.eu/info/publications_en"
+msgstr "https://ec.europa.eu/info/publications_es"
+
+msgid "Publications"
+msgstr "Publicaciones"
+
+msgid "https://ec.europa.eu/info/about-european-commission/contact_en"
+msgstr "https://ec.europa.eu/info/about-european-commission/contact_es"
+
+msgid "Contact the European Commission"
+msgstr "Póngase en contacto con la Comisión Europea"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en#n:+i:4+e:1+t:+s"
 msgstr "https://europa.eu/european-union/contact/social-networks_es#n:+i:4+e:1+t:+s"
 
-msgid "Other social media"
-msgstr "Otras redes sociales"
-
-msgid "European Union"
-msgstr "Unión Europea"
-
-msgid "https://europa.eu/european-union/about-eu/institutions-bodies_en"
-msgstr "https://europa.eu/european-union/about-eu/institutions-bodies_es"
-
-msgid "EU institutions"
-msgstr "Instituciones de la UE"
-
-msgid "https://europa.eu/european-union/index_en"
-msgstr "https://europa.eu/european-union/index_es"
-
-msgid "https://ec.europa.eu/info/about-commissions-new-web-presence_en"
-msgstr "https://ec.europa.eu/info/about-commissions-new-web-presence_es"
-
-msgid "About the Commission's new web presence"
-msgstr "Sobre la nueva página web de la Comisión"
-
-msgid "https://ec.europa.eu/info/language-policy_en"
-msgstr "https://ec.europa.eu/info/language-policy_es"
+msgid "Follow the European Commission on social media"
+msgstr "Seguir a la Comisión Europea en las redes sociales"
 
 msgid "https://ec.europa.eu/info/resources-partners_en"
-msgstr "http://ec.europa.eu/info/resources-partners_es"
+msgstr "https://ec.europa.eu/info/resources-partners_es"
 
 msgid "Resources for partners"
 msgstr "Recursos disponibles"
+
+msgid "https://ec.europa.eu/info/language-policy_en"
+msgstr "https://ec.europa.eu/info/language-policy_es"
 
 msgid "https://ec.europa.eu/info/cookies_en"
 msgstr "https://ec.europa.eu/info/cookies_es"
@@ -181,11 +268,9 @@ msgstr "https://ec.europa.eu/info/privacy-policy_es"
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_es"
 
-msgid "https://ec.europa.eu/info/contact_en"
-msgstr "https://ec.europa.eu/info/contact_es"
+msgid "https://ec.europa.eu/info/brexit-content-disclaimer_en"
+msgstr "https://ec.europa.eu/info/brexit-content-disclaimer_es"
 
-msgid "Contact"
-msgstr "Contacto"
+msgid "Brexit content disclaimer"
+msgstr "Exención - contenido sobre el brexit"
 
-msgid "Policies, information and services"
-msgstr "Políticas, información y servicios"
