--- a/translations/oe_corporate_blocks-pl.po
+++ b/translations/oe_corporate_blocks-pl.po
@@ -97,41 +97,38 @@ msgstr "Europejski Inspektor Ochrony Danych (EIOD)"
 msgid "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=en"
 msgstr "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=pl"
 
-msgid "Sitemap"
-msgstr "Mapa strony"
-
-msgid "/european-union/abouteuropa/sitemap_en"
-msgstr "/european-union/abouteuropa/sitemap_pl"
-
 msgid "About this site"
 msgstr "Informacje o stronie"
 
-msgid "/european-union/abouteuropa_en"
-msgstr "/european-union/abouteuropa_pl"
+msgid "https://europa.eu/european-union/abouteuropa_en"
+msgstr "https://europa.eu/european-union/abouteuropa_pl"
 
 msgid "Language policy"
 msgstr "Polityka językowa"
 
-msgid "/european-union/abouteuropa/language-policy_en"
-msgstr "/european-union/abouteuropa/language-policy_pl"
+msgid "https://europa.eu/european-union/abouteuropa/language-policy_en"
+msgstr "https://europa.eu/european-union/abouteuropa/language-policy_pl"
 
 msgid "Privacy policy"
 msgstr "Polityka prywatności"
 
-msgid "/european-union/abouteuropa/privacy-policy_en"
-msgstr "/european-union/abouteuropa/privacy-policy_pl"
+msgid "https://europa.eu/european-union/abouteuropa/privacy-policy_en"
+msgstr "https://europa.eu/european-union/abouteuropa/privacy-policy_pl"
 
 msgid "Legal notice"
 msgstr "Informacja prawna"
 
-msgid "/european-union/abouteuropa/legal_notices_en"
-msgstr "/european-union/abouteuropa/legal_notices_pl"
+msgid "https://europa.eu/european-union/abouteuropa/legal_notices_en"
+msgstr "https://europa.eu/european-union/abouteuropa/legal_notices_pl"
+
+msgid "https://europa.eu/european-union/brexit-content-disclaimer_en"
+msgstr "https://europa.eu/european-union/brexit-content-disclaimer_pl"
 
 msgid "Cookies"
 msgstr "Pliki cookie"
 
-msgid "/european-union/abouteuropa/cookies_en"
-msgstr "/european-union/abouteuropa/cookies_pl"
+msgid "https://europa.eu/european-union/abouteuropa/cookies_en"
+msgstr "https://europa.eu/european-union/abouteuropa/cookies_pl"
 
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_pl"
@@ -139,41 +136,131 @@ msgstr "https://ec.europa.eu/info/index_pl"
 msgid "European Commission website"
 msgstr "Strona internetowa Komisji Europejskiej"
 
-msgid "Follow the European Commission"
-msgstr "Komisja Europejska w mediach społecznościowych"
+msgid "This site is managed by the Directorate-General for Communication"
+msgstr "Stroną zarządza Dyrekcja Generalna ds. Komunikacji Społecznej"
+
+msgid "https://ec.europa.eu/info/strategy_en"
+msgstr "https://ec.europa.eu/info/strategy_pl"
+
+msgid "Strategy"
+msgstr "Strategia polityczna"
+
+msgid "https://ec.europa.eu/info/about-european-commission_en"
+msgstr "https://ec.europa.eu/info/about-european-commission_pl"
+
+msgid "About the European Commission"
+msgstr "Informacje o Komisji Europejskiej"
+
+msgid "https://ec.europa.eu/info/business-economy-euro_en"
+msgstr "https://ec.europa.eu/info/business-economy-euro_pl"
+
+msgid "Business, Economy, Euro"
+msgstr "Biznes, gospodarka, euro"
+
+msgid "https://ec.europa.eu/info/live-work-travel-eu_en"
+msgstr "https://ec.europa.eu/info/live-work-travel-eu_pl"
+
+msgid "Live, work, travel in the EU"
+msgstr "Życie, praca i podróże na obszarze UE"
+
+msgid "https://ec.europa.eu/info/law_en"
+msgstr "https://ec.europa.eu/info/law_pl"
+
+msgid "Law"
+msgstr "Przepisy"
+
+msgid "https://ec.europa.eu/info/funding-tenders_en"
+msgstr "https://ec.europa.eu/info/funding-tenders_pl"
+
+msgid "Funding, Tenders"
+msgstr "Środki unijne i przetargi"
+
+msgid "https://ec.europa.eu/info/research-and-innovation_en"
+msgstr "https://ec.europa.eu/info/research-and-innovation_pl"
+
+msgid "Research and innovation"
+msgstr "Badania naukowe i innowacje"
+
+msgid "https://ec.europa.eu/info/energy-climate-change-environment_en"
+msgstr "https://ec.europa.eu/info/energy-climate-change-environment_pl"
+
+msgid "Energy, Climate change, Environment"
+msgstr "Energia, zmiana klimatu i środowisko"
+
+msgid "https://ec.europa.eu/info/education_en"
+msgstr "https://ec.europa.eu/info/education_pl"
+
+msgid "Education"
+msgstr "Edukacja"
+
+msgid "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_en"
+msgstr "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_pl"
+
+msgid "Aid, Development cooperation, Fundamental rights"
+msgstr "Pomoc humanitarna, współpraca na rzecz rozwoju i prawa podstawowe"
+
+msgid "https://ec.europa.eu/info/food-farming-fisheries_en"
+msgstr "https://ec.europa.eu/info/food-farming-fisheries_pl"
+
+msgid "Food, Farming, Fisheries"
+msgstr "Żywność, rolnictwo, rybołówstwo"
+
+msgid "https://ec.europa.eu/info/eu-regional-and-urban-development_en"
+msgstr "https://ec.europa.eu/info/eu-regional-and-urban-development_pl"
+
+msgid "EU regional and urban development"
+msgstr "Rozwój regionów i miast UE"
+
+msgid "https://ec.europa.eu/info/jobs-european-commission_en"
+msgstr "https://ec.europa.eu/info/jobs-european-commission_pl"
+
+msgid "Jobs at the European Commission"
+msgstr "Możliwości zatrudnienia w Komisji Europejskiej"
+
+msgid "https://ec.europa.eu/info/statistics_en"
+msgstr "https://ec.europa.eu/info/statistics_pl"
+
+msgid "Statistics"
+msgstr "Statystyki"
+
+msgid "https://ec.europa.eu/commission/presscorner/home/en"
+msgstr "https://ec.europa.eu/commission/presscorner/home/pl"
+
+msgid "News"
+msgstr "Aktualności"
+
+msgid "https://ec.europa.eu/info/events_en"
+msgstr "https://ec.europa.eu/info/events_pl"
+
+msgid "Events"
+msgstr "Wydarzenia"
+
+msgid "https://ec.europa.eu/info/publications_en"
+msgstr "https://ec.europa.eu/info/publications_pl"
+
+msgid "Publications"
+msgstr "Publikacje"
+
+msgid "https://ec.europa.eu/info/about-european-commission/contact_en"
+msgstr "https://ec.europa.eu/info/about-european-commission/contact_pl"
+
+msgid "Contact the European Commission"
+msgstr "Kontakt z Komisją Europejską"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en#n:+i:4+e:1+t:+s"
 msgstr "https://europa.eu/european-union/contact/social-networks_pl#n:+i:4+e:1+t:+s"
 
-msgid "Other social media"
-msgstr "Inne serwisy społecznościowe"
-
-msgid "European Union"
-msgstr "Unia Europejska"
-
-msgid "https://europa.eu/european-union/about-eu/institutions-bodies_en"
-msgstr "https://europa.eu/european-union/about-eu/institutions-bodies_pl"
-
-msgid "EU institutions"
-msgstr "Instytucje UE"
-
-msgid "https://europa.eu/european-union/index_en"
-msgstr "https://europa.eu/european-union/index_pl"
-
-msgid "https://ec.europa.eu/info/about-commissions-new-web-presence_en"
-msgstr "https://ec.europa.eu/info/about-commissions-new-web-presence_pl"
-
-msgid "About the Commission's new web presence"
-msgstr "Informacje o nowej generacji stron internetowych Komisji"
-
-msgid "https://ec.europa.eu/info/language-policy_en"
-msgstr "https://ec.europa.eu/info/language-policy_pl"
+msgid "Follow the European Commission on social media"
+msgstr "Komisja Europejska w mediach społecznościowych"
 
 msgid "https://ec.europa.eu/info/resources-partners_en"
-msgstr "http://ec.europa.eu/info/resources-partners_pl"
+msgstr "https://ec.europa.eu/info/resources-partners_pl"
 
 msgid "Resources for partners"
 msgstr "Materiały dla partnerów"
+
+msgid "https://ec.europa.eu/info/language-policy_en"
+msgstr "https://ec.europa.eu/info/language-policy_pl"
 
 msgid "https://ec.europa.eu/info/cookies_en"
 msgstr "https://ec.europa.eu/info/cookies_pl"
@@ -184,11 +271,9 @@ msgstr "https://ec.europa.eu/info/privacy-policy_pl"
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_pl"
 
-msgid "https://ec.europa.eu/info/contact_en"
-msgstr "https://ec.europa.eu/info/contact_pl"
+msgid "https://ec.europa.eu/info/brexit-content-disclaimer_en"
+msgstr "https://ec.europa.eu/info/brexit-content-disclaimer_pl"
 
-msgid "Contact"
-msgstr "Kontakt"
+msgid "Brexit content disclaimer"
+msgstr "Zastrzeżenie prawne – Brexit"
 
-msgid "Policies, information and services"
-msgstr "Obszary polityki, informacje i usługi"
