--- a/translations/oe_corporate_blocks-cs.po
+++ b/translations/oe_corporate_blocks-cs.po
@@ -94,38 +94,35 @@ msgstr "Evropský inspektor ochrany údajů"
 msgid "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=en"
 msgstr "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=cs"
 
-msgid "Sitemap"
-msgstr "Mapa stránek"
-
-msgid "/european-union/abouteuropa/sitemap_en"
-msgstr "/european-union/abouteuropa/sitemap_cs"
-
 msgid "About this site"
 msgstr "O těchto stránkách"
 
-msgid "/european-union/abouteuropa_en"
-msgstr "/european-union/abouteuropa_cs"
+msgid "https://europa.eu/european-union/abouteuropa_en"
+msgstr "https://europa.eu/european-union/abouteuropa_cs"
 
 msgid "Language policy"
 msgstr "Jazyková politika"
 
-msgid "/european-union/abouteuropa/language-policy_en"
-msgstr "/european-union/abouteuropa/language-policy_cs"
+msgid "https://europa.eu/european-union/abouteuropa/language-policy_en"
+msgstr "https://europa.eu/european-union/abouteuropa/language-policy_cs"
 
 msgid "Privacy policy"
 msgstr "Politika ochrany soukromí"
 
-msgid "/european-union/abouteuropa/privacy-policy_en"
-msgstr "/european-union/abouteuropa/privacy-policy_cs"
+msgid "https://europa.eu/european-union/abouteuropa/privacy-policy_en"
+msgstr "https://europa.eu/european-union/abouteuropa/privacy-policy_cs"
 
 msgid "Legal notice"
 msgstr "Právní upozornění"
 
-msgid "/european-union/abouteuropa/legal_notices_en"
-msgstr "/european-union/abouteuropa/legal_notices_cs"
+msgid "https://europa.eu/european-union/abouteuropa/legal_notices_en"
+msgstr "https://europa.eu/european-union/abouteuropa/legal_notices_cs"
 
-msgid "/european-union/abouteuropa/cookies_en"
-msgstr "/european-union/abouteuropa/cookies_cs"
+msgid "https://europa.eu/european-union/brexit-content-disclaimer_en"
+msgstr "https://europa.eu/european-union/brexit-content-disclaimer_cs"
+
+msgid "https://europa.eu/european-union/abouteuropa/cookies_en"
+msgstr "https://europa.eu/european-union/abouteuropa/cookies_cs"
 
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_cs"
@@ -133,41 +130,131 @@ msgstr "https://ec.europa.eu/info/index_cs"
 msgid "European Commission website"
 msgstr "Internetové stránky Evropské komise"
 
-msgid "Follow the European Commission"
-msgstr "Sledujte Evropskou komisi"
+msgid "This site is managed by the Directorate-General for Communication"
+msgstr "Tyto stránky spravuje Generální ředitelství pro komunikaci"
+
+msgid "https://ec.europa.eu/info/strategy_en"
+msgstr "https://ec.europa.eu/info/strategy_cs"
+
+msgid "Strategy"
+msgstr "Politická strategie EU"
+
+msgid "https://ec.europa.eu/info/about-european-commission_en"
+msgstr "https://ec.europa.eu/info/about-european-commission_cs"
+
+msgid "About the European Commission"
+msgstr "O Evropské komisi"
+
+msgid "https://ec.europa.eu/info/business-economy-euro_en"
+msgstr "https://ec.europa.eu/info/business-economy-euro_cs"
+
+msgid "Business, Economy, Euro"
+msgstr "Podnikání, ekonomika, euro"
+
+msgid "https://ec.europa.eu/info/live-work-travel-eu_en"
+msgstr "https://ec.europa.eu/info/live-work-travel-eu_cs"
+
+msgid "Live, work, travel in the EU"
+msgstr "Pobyt, práce a cestování v EU"
+
+msgid "https://ec.europa.eu/info/law_en"
+msgstr "https://ec.europa.eu/info/law_cs"
+
+msgid "Law"
+msgstr "Právní předpisy"
+
+msgid "https://ec.europa.eu/info/funding-tenders_en"
+msgstr "https://ec.europa.eu/info/funding-tenders_cs"
+
+msgid "Funding, Tenders"
+msgstr "Financování, tendry, výběrová řízení"
+
+msgid "https://ec.europa.eu/info/research-and-innovation_en"
+msgstr "https://ec.europa.eu/info/research-and-innovation_cs"
+
+msgid "Research and innovation"
+msgstr "Výzkum a inovace"
+
+msgid "https://ec.europa.eu/info/energy-climate-change-environment_en"
+msgstr "https://ec.europa.eu/info/energy-climate-change-environment_cs"
+
+msgid "Energy, Climate change, Environment"
+msgstr "Energetika, změna klimatu, životní prostředí"
+
+msgid "https://ec.europa.eu/info/education_en"
+msgstr "https://ec.europa.eu/info/education_cs"
+
+msgid "Education"
+msgstr "Vzdělávání"
+
+msgid "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_en"
+msgstr "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_cs"
+
+msgid "Aid, Development cooperation, Fundamental rights"
+msgstr "Pomoc, rozvojová spolupráce, základní práva"
+
+msgid "https://ec.europa.eu/info/food-farming-fisheries_en"
+msgstr "https://ec.europa.eu/info/food-farming-fisheries_cs"
+
+msgid "Food, Farming, Fisheries"
+msgstr "Potraviny, zemědělství, rybolov"
+
+msgid "https://ec.europa.eu/info/eu-regional-and-urban-development_en"
+msgstr "https://ec.europa.eu/info/eu-regional-and-urban-development_cs"
+
+msgid "EU regional and urban development"
+msgstr "Regionální a městský rozvoj"
+
+msgid "https://ec.europa.eu/info/jobs-european-commission_en"
+msgstr "https://ec.europa.eu/info/jobs-european-commission_cs"
+
+msgid "Jobs at the European Commission"
+msgstr "Kariéra v Evropské komisi"
+
+msgid "https://ec.europa.eu/info/statistics_en"
+msgstr "https://ec.europa.eu/info/statistics_cs"
+
+msgid "Statistics"
+msgstr "Statistiky"
+
+msgid "https://ec.europa.eu/commission/presscorner/home/en"
+msgstr "https://ec.europa.eu/commission/presscorner/home/cs"
+
+msgid "News"
+msgstr "Aktuality"
+
+msgid "https://ec.europa.eu/info/events_en"
+msgstr "https://ec.europa.eu/info/events_cs"
+
+msgid "Events"
+msgstr "Akce "
+
+msgid "https://ec.europa.eu/info/publications_en"
+msgstr "https://ec.europa.eu/info/publications_cs"
+
+msgid "Publications"
+msgstr "Publikace"
+
+msgid "https://ec.europa.eu/info/about-european-commission/contact_en"
+msgstr "https://ec.europa.eu/info/about-european-commission/contact_cs"
+
+msgid "Contact the European Commission"
+msgstr "Kontakt na Evropskou komisi"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en#n:+i:4+e:1+t:+s"
 msgstr "https://europa.eu/european-union/contact/social-networks_cs#n:+i:4+e:1+t:+s"
 
-msgid "Other social media"
-msgstr "Ostatní sociální sítě"
-
-msgid "European Union"
-msgstr "Evropská unie"
-
-msgid "https://europa.eu/european-union/about-eu/institutions-bodies_en"
-msgstr "https://europa.eu/european-union/about-eu/institutions-bodies_cs"
-
-msgid "EU institutions"
-msgstr "Orgány EU"
-
-msgid "https://europa.eu/european-union/index_en"
-msgstr "https://europa.eu/european-union/index_cs"
-
-msgid "https://ec.europa.eu/info/about-commissions-new-web-presence_en"
-msgstr "https://ec.europa.eu/info/about-commissions-new-web-presence_cs"
-
-msgid "About the Commission's new web presence"
-msgstr "Ostatní sociální sítě"
-
-msgid "https://ec.europa.eu/info/language-policy_en"
-msgstr "https://ec.europa.eu/info/language-policy_cs"
+msgid "Follow the European Commission on social media"
+msgstr "Evropská komise na sociálních médiích"
 
 msgid "https://ec.europa.eu/info/resources-partners_en"
-msgstr "http://ec.europa.eu/info/resources-partners_cs"
+msgstr "https://ec.europa.eu/info/resources-partners_cs"
 
 msgid "Resources for partners"
 msgstr "Zdroje a pokyny pro naše partnery"
+
+msgid "https://ec.europa.eu/info/language-policy_en"
+msgstr "https://ec.europa.eu/info/language-policy_cs"
 
 msgid "https://ec.europa.eu/info/cookies_en"
 msgstr "https://ec.europa.eu/info/cookies_cs"
@@ -178,11 +265,9 @@ msgstr "https://ec.europa.eu/info/privacy-policy_cs"
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_cs"
 
-msgid "https://ec.europa.eu/info/contact_en"
-msgstr "https://ec.europa.eu/info/contact_cs"
+msgid "https://ec.europa.eu/info/brexit-content-disclaimer_en"
+msgstr "https://ec.europa.eu/info/brexit-content-disclaimer_cs"
 
-msgid "Contact"
-msgstr "Kontakt"
+msgid "Brexit content disclaimer"
+msgstr "Vyloučení odpovědnosti za obsah (Brexit)"
 
-msgid "Policies, information and services"
-msgstr "Oblasti politiky, informace a služby"
