--- a/translations/oe_corporate_blocks-de.po
+++ b/translations/oe_corporate_blocks-de.po
@@ -100,38 +100,32 @@ msgstr "Europäischer Datenschutzbeauftragter (EDSB)"
 msgid "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=en"
 msgstr "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=de"
 
-msgid "Sitemap"
-msgstr "Wegweiser"
-
-msgid "/european-union/abouteuropa/sitemap_en"
-msgstr "/european-union/abouteuropa/sitemap_de"
-
 msgid "About this site"
 msgstr "Über diese Website"
 
-msgid "/european-union/abouteuropa_en"
-msgstr "/european-union/abouteuropa_de"
+msgid "https://europa.eu/european-union/abouteuropa_en"
+msgstr "https://europa.eu/european-union/abouteuropa_de"
 
 msgid "Language policy"
 msgstr "Sprachenpolitik"
 
-msgid "/european-union/abouteuropa/language-policy_en"
-msgstr "/european-union/abouteuropa/language-policy_de"
+msgid "https://europa.eu/european-union/abouteuropa/language-policy_en"
+msgstr "https://europa.eu/european-union/abouteuropa/language-policy_de"
 
 msgid "Privacy policy"
 msgstr "Schutz der Privatsphäre"
 
-msgid "/european-union/abouteuropa/privacy-policy_en"
-msgstr "/european-union/abouteuropa/privacy-policy_de"
+msgid "https://europa.eu/european-union/abouteuropa/privacy-policy_en"
+msgstr "https://europa.eu/european-union/abouteuropa/privacy-policy_de"
 
 msgid "Legal notice"
 msgstr "Rechtlicher Hinweis"
 
-msgid "/european-union/abouteuropa/legal_notices_en"
-msgstr "/european-union/abouteuropa/legal_notices_de"
+msgid "https://europa.eu/european-union/abouteuropa/legal_notices_en"
+msgstr "https://europa.eu/european-union/abouteuropa/legal_notices_de"
 
-msgid "/european-union/abouteuropa/cookies_en"
-msgstr "/european-union/abouteuropa/cookies_de"
+msgid "https://europa.eu/european-union/abouteuropa/cookies_en"
+msgstr "https://europa.eu/european-union/abouteuropa/cookies_de"
 
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_de"
@@ -139,41 +133,134 @@ msgstr "https://ec.europa.eu/info/index_de"
 msgid "European Commission website"
 msgstr "Website der Europäischen Kommission"
 
-msgid "Follow the European Commission"
-msgstr "Folgen Sie der Europäischen Kommission"
+msgid "This site is managed by the Directorate-General for Communication"
+msgstr "Diese Website wird von der Generaldirektion Kommunikation verwaltet"
+
+msgid "https://ec.europa.eu/info/strategy_en"
+msgstr "https://ec.europa.eu/info/strategy_de"
+
+msgid "Strategy"
+msgstr "Strategie"
+
+msgid "https://ec.europa.eu/info/about-european-commission_en"
+msgstr "https://ec.europa.eu/info/about-european-commission_de"
+
+msgid "About the European Commission"
+msgstr "Informationen über die Europäische Kommission"
+
+msgid "https://ec.europa.eu/info/business-economy-euro_en"
+msgstr "https://ec.europa.eu/info/business-economy-euro_de"
+
+msgid "Business, Economy, Euro"
+msgstr "Geschäftswelt, Wirtschaft, Euro"
+
+msgid "https://ec.europa.eu/info/live-work-travel-eu_en"
+msgstr "https://ec.europa.eu/info/live-work-travel-eu_de"
+
+msgid "Live, work, travel in the EU"
+msgstr "Leben, Arbeiten und Reisen in der EU"
+
+msgid "https://ec.europa.eu/info/law_en"
+msgstr "https://ec.europa.eu/info/law_de"
+
+msgid "Law"
+msgstr "Rechtsakt"
+
+msgid "https://ec.europa.eu/info/funding-tenders_en"
+msgstr "https://ec.europa.eu/info/funding-tenders_de"
+
+msgid "Funding, Tenders"
+msgstr "Finanzierung, Ausschreibungen"
+
+msgid "https://ec.europa.eu/info/research-and-innovation_en"
+msgstr "https://ec.europa.eu/info/research-and-innovation_de"
+
+msgid "Research and innovation"
+msgstr "Forschung und Innovation"
+
+msgid "https://ec.europa.eu/info/energy-climate-change-environment_en"
+msgstr "https://ec.europa.eu/info/energy-climate-change-environment_de"
+
+msgid "Energy, Climate change, Environment"
+msgstr "Energie, Klimawandel, Umwelt"
+
+msgid "https://ec.europa.eu/info/education_en"
+msgstr "https://ec.europa.eu/info/education_de"
+
+msgid "Education"
+msgstr "Bildung"
+
+msgid "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_en"
+msgstr "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_de"
+
+msgid "Aid, Development cooperation, Fundamental rights"
+msgstr "Hilfe, Entwicklungszusammenarbeit, Grundrechte"
+
+msgid "https://ec.europa.eu/info/food-farming-fisheries_en"
+msgstr "https://ec.europa.eu/info/food-farming-fisheries_de"
+
+msgid "Food, Farming, Fisheries"
+msgstr "Lebens- und Nahrungsmittel, Landwirtschaft, Fischerei"
+
+msgid "https://ec.europa.eu/info/eu-regional-and-urban-development_en"
+msgstr "https://ec.europa.eu/info/eu-regional-and-urban-development_de"
+
+msgid "EU regional and urban development"
+msgstr "EU-Investitionen in Regionen und Städte"
+
+msgid "https://ec.europa.eu/info/jobs-european-commission_en"
+msgstr "https://ec.europa.eu/info/jobs-european-commission_de"
+
+msgid "Jobs at the European Commission"
+msgstr "Stellen bei der Europäischen Kommission"
+
+msgid "https://ec.europa.eu/info/statistics_en"
+msgstr "https://ec.europa.eu/info/statistics_de"
+
+msgid "Statistics"
+msgstr "Statistiken"
+
+msgid "https://ec.europa.eu/commission/presscorner/home/en"
+msgstr "https://ec.europa.eu/commission/presscorner/home/de"
+
+msgid "News"
+msgstr "Nachrichten"
+
+msgid "https://ec.europa.eu/info/events_en"
+msgstr "https://ec.europa.eu/info/events_de"
+
+msgid "Events"
+msgstr "Veranstaltungen"
+
+msgid "https://ec.europa.eu/info/publications_en"
+msgstr "https://ec.europa.eu/info/publications_de"
+
+msgid "Publications"
+msgstr "Veröffentlichungen"
+
+msgid "https://ec.europa.eu/info/about-european-commission/contact_en"
+msgstr "https://ec.europa.eu/info/about-european-commission/contact_de"
+
+msgid "Contact the European Commission"
+msgstr "Kontakt zur Europäischen Kommission"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en#n:+i:4+e:1+t:+s"
 msgstr "https://europa.eu/european-union/contact/social-networks_de#n:+i:4+e:1+t:+s"
 
-msgid "Other social media"
-msgstr "Andere soziale Medien"
+msgid "Follow the European Commission on social media"
+msgstr "Folgen Sie der Europäischen Kommission in den sozialen Medien"
 
-msgid "European Union"
-msgstr "Europäische Union"
+msgid "https://ec.europa.eu/info/resources-partners_en"
+msgstr "https://ec.europa.eu/info/resources-partners_de"
 
-msgid "https://europa.eu/european-union/about-eu/institutions-bodies_en"
-msgstr "https://europa.eu/european-union/about-eu/institutions-bodies_de"
-
-msgid "EU institutions"
-msgstr "EU-Institutionen"
-
-msgid "https://europa.eu/european-union/index_en"
-msgstr "https://europa.eu/european-union/index_de"
-
-msgid "https://ec.europa.eu/info/about-commissions-new-web-presence_en"
-msgstr "https://ec.europa.eu/info/about-commissions-new-web-presence_de"
-
-msgid "About the Commission's new web presence"
-msgstr "Über den neuen Internetauftritt der Kommission"
+msgid "Resources for partners"
+msgstr "Ressourcen für Partner"
 
 msgid "https://ec.europa.eu/info/language-policy_en"
 msgstr "https://ec.europa.eu/info/language-policy_de"
 
-msgid "https://ec.europa.eu/info/resources-partners_en"
-msgstr "http://ec.europa.eu/info/resources-partners_de"
-
-msgid "Resources for partners"
-msgstr "Ressourcen für Partner"
+msgid "https://europa.eu/european-union/brexit-content-disclaimer_en"
+msgstr "https://europa.eu/european-union/brexit-content-disclaimer_de"
 
 msgid "https://ec.europa.eu/info/cookies_en"
 msgstr "https://ec.europa.eu/info/cookies_de"
@@ -184,11 +271,9 @@ msgstr "https://ec.europa.eu/info/privacy-policy_de"
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_de"
 
-msgid "https://ec.europa.eu/info/contact_en"
-msgstr "https://ec.europa.eu/info/contact_de"
+msgid "https://ec.europa.eu/info/brexit-content-disclaimer_en"
+msgstr "https://ec.europa.eu/info/brexit-content-disclaimer_de"
 
-msgid "Contact"
-msgstr "Kontakt"
+msgid "Brexit content disclaimer"
+msgstr "Brexit-Haftungsausschluss"
 
-msgid "Policies, information and services"
-msgstr "Politikfelder, Informationen und Dienste"
