--- a/translations/oe_corporate_blocks-fr.po
+++ b/translations/oe_corporate_blocks-fr.po
@@ -97,38 +97,35 @@ msgstr "Contrôleur européen de la protection des données"
 msgid "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=en"
 msgstr "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=fr"
 
-msgid "Sitemap"
-msgstr "Plan du site"
-
-msgid "/european-union/abouteuropa/sitemap_en"
-msgstr "/european-union/abouteuropa/sitemap_fr"
-
 msgid "About this site"
 msgstr "À propos de ce site"
 
-msgid "/european-union/abouteuropa_en"
-msgstr "/european-union/abouteuropa_fr"
+msgid "https://europa.eu/european-union/abouteuropa_en"
+msgstr "https://europa.eu/european-union/abouteuropa_fr"
 
 msgid "Language policy"
 msgstr "Politique linguistique"
 
-msgid "/european-union/abouteuropa/language-policy_en"
-msgstr "/european-union/abouteuropa/language-policy_fr"
+msgid "https://europa.eu/european-union/abouteuropa/language-policy_en"
+msgstr "https://europa.eu/european-union/abouteuropa/language-policy_fr"
 
 msgid "Privacy policy"
 msgstr "Protection de la vie privée"
 
-msgid "/european-union/abouteuropa/privacy-policy_en"
-msgstr "/european-union/abouteuropa/privacy-policy_fr"
+msgid "https://europa.eu/european-union/abouteuropa/privacy-policy_en"
+msgstr "https://europa.eu/european-union/abouteuropa/privacy-policy_fr"
 
 msgid "Legal notice"
 msgstr "Avis juridique"
 
-msgid "/european-union/abouteuropa/legal_notices_en"
-msgstr "/european-union/abouteuropa/legal_notices_fr"
+msgid "https://europa.eu/european-union/abouteuropa/legal_notices_en"
+msgstr "https://europa.eu/european-union/abouteuropa/legal_notices_fr"
 
-msgid "/european-union/abouteuropa/cookies_en"
-msgstr "/european-union/abouteuropa/cookies_fr"
+msgid "https://europa.eu/european-union/brexit-content-disclaimer_en"
+msgstr "https://europa.eu/european-union/brexit-content-disclaimer_fr"
+
+msgid "https://europa.eu/european-union/abouteuropa/cookies_en"
+msgstr "https://europa.eu/european-union/abouteuropa/cookies_fr"
 
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_fr"
@@ -136,41 +133,131 @@ msgstr "https://ec.europa.eu/info/index_fr"
 msgid "European Commission website"
 msgstr "Site web de la Commission européenne"
 
-msgid "Follow the European Commission"
-msgstr "Suivre la Commission européenne"
+msgid "This site is managed by the Directorate-General for Communication"
+msgstr "Ce site est géré par la direction générale de la communication"
+
+msgid "https://ec.europa.eu/info/strategy_en"
+msgstr "https://ec.europa.eu/info/strategy_fr"
+
+msgid "Strategy"
+msgstr "Stratégie"
+
+msgid "https://ec.europa.eu/info/about-european-commission_en"
+msgstr "https://ec.europa.eu/info/about-european-commission_fr"
+
+msgid "About the European Commission"
+msgstr "À propos de la Commission européenne"
+
+msgid "https://ec.europa.eu/info/business-economy-euro_en"
+msgstr "https://ec.europa.eu/info/business-economy-euro_fr"
+
+msgid "Business, Economy, Euro"
+msgstr "Entreprises, économie et euro"
+
+msgid "https://ec.europa.eu/info/live-work-travel-eu_en"
+msgstr "https://ec.europa.eu/info/live-work-travel-eu_fr"
+
+msgid "Live, work, travel in the EU"
+msgstr "Vivre, travailler et voyager dans l’UE"
+
+msgid "https://ec.europa.eu/info/law_en"
+msgstr "https://ec.europa.eu/info/law_fr"
+
+msgid "Law"
+msgstr "Législation"
+
+msgid "https://ec.europa.eu/info/funding-tenders_en"
+msgstr "https://ec.europa.eu/info/funding-tenders_fr"
+
+msgid "Funding, Tenders"
+msgstr "Financement, appels d’offres"
+
+msgid "https://ec.europa.eu/info/research-and-innovation_en"
+msgstr "https://ec.europa.eu/info/research-and-innovation_fr"
+
+msgid "Research and innovation"
+msgstr "Recherche et innovation"
+
+msgid "https://ec.europa.eu/info/energy-climate-change-environment_en"
+msgstr "https://ec.europa.eu/info/energy-climate-change-environment_fr"
+
+msgid "Energy, Climate change, Environment"
+msgstr "Énergie, changement climatique, environnement"
+
+msgid "https://ec.europa.eu/info/education_en"
+msgstr "https://ec.europa.eu/info/education_fr"
+
+msgid "Education"
+msgstr "Éducation"
+
+msgid "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_en"
+msgstr "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_fr"
+
+msgid "Aid, Development cooperation, Fundamental rights"
+msgstr "Aide, coopération au développement et droits fondamentaux"
+
+msgid "https://ec.europa.eu/info/food-farming-fisheries_en"
+msgstr "https://ec.europa.eu/info/food-farming-fisheries_fr"
+
+msgid "Food, Farming, Fisheries"
+msgstr "Alimentation, agriculture et pêche"
+
+msgid "https://ec.europa.eu/info/eu-regional-and-urban-development_en"
+msgstr "https://ec.europa.eu/info/eu-regional-and-urban-development_fr"
+
+msgid "EU regional and urban development"
+msgstr "Développement régional et urbain de l’UE"
+
+msgid "https://ec.europa.eu/info/jobs-european-commission_en"
+msgstr "https://ec.europa.eu/info/jobs-european-commission_fr"
+
+msgid "Jobs at the European Commission"
+msgstr "Travailler à la Commission européenne"
+
+msgid "https://ec.europa.eu/info/statistics_en"
+msgstr "https://ec.europa.eu/info/statistics_fr"
+
+msgid "Statistics"
+msgstr "Statistiques"
+
+msgid "https://ec.europa.eu/commission/presscorner/home/en"
+msgstr "https://ec.europa.eu/commission/presscorner/home/fr"
+
+msgid "News"
+msgstr "Actualité"
+
+msgid "https://ec.europa.eu/info/events_en"
+msgstr "https://ec.europa.eu/info/events_fr"
+
+msgid "Events"
+msgstr "Événements"
+
+msgid "https://ec.europa.eu/info/publications_en"
+msgstr "https://ec.europa.eu/info/publications_fr"
+
+msgid "Publications"
+msgstr "Publications"
+
+msgid "https://ec.europa.eu/info/about-european-commission/contact_en"
+msgstr "https://ec.europa.eu/info/about-european-commission/contact_fr"
+
+msgid "Contact the European Commission"
+msgstr "Contacter la Commission européenne"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en#n:+i:4+e:1+t:+s"
 msgstr "https://europa.eu/european-union/contact/social-networks_fr#n:+i:4+e:1+t:+s"
 
-msgid "Other social media"
-msgstr "Autres réseaux sociaux"
-
-msgid "European Union"
-msgstr "Union européenne"
-
-msgid "https://europa.eu/european-union/about-eu/institutions-bodies_en"
-msgstr "https://europa.eu/european-union/about-eu/institutions-bodies_fr"
-
-msgid "EU institutions"
-msgstr "Institutions de l’UE"
-
-msgid "https://europa.eu/european-union/index_en"
-msgstr "https://europa.eu/european-union/index_fr"
-
-msgid "https://ec.europa.eu/info/about-commissions-new-web-presence_en"
-msgstr "https://ec.europa.eu/info/about-commissions-new-web-presence_fr"
-
-msgid "About the Commission's new web presence"
-msgstr "À propos de la nouvelle présence de la Commission sur le web"
-
-msgid "https://ec.europa.eu/info/language-policy_en"
-msgstr "https://ec.europa.eu/info/language-policy_fr"
+msgid "Follow the European Commission on social media"
+msgstr "Suivre la Commission européenne sur les médias sociaux"
 
 msgid "https://ec.europa.eu/info/resources-partners_en"
-msgstr "http://ec.europa.eu/info/resources-partners_fr"
+msgstr "https://ec.europa.eu/info/resources-partners_fr"
 
 msgid "Resources for partners"
 msgstr "Ressources pour les partenaires"
+
+msgid "https://ec.europa.eu/info/language-policy_en"
+msgstr "https://ec.europa.eu/info/language-policy_fr"
 
 msgid "https://ec.europa.eu/info/cookies_en"
 msgstr "https://ec.europa.eu/info/cookies_fr"
@@ -181,8 +268,9 @@ msgstr "https://ec.europa.eu/info/privacy-policy_fr"
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_fr"
 
-msgid "https://ec.europa.eu/info/contact_en"
-msgstr "https://ec.europa.eu/info/contact_fr"
+msgid "https://ec.europa.eu/info/brexit-content-disclaimer_en"
+msgstr "https://ec.europa.eu/info/brexit-content-disclaimer_fr"
 
-msgid "Policies, information and services"
-msgstr "Politiques, informations et services"
+msgid "Brexit content disclaimer"
+msgstr "Brexit: clause de non-responsabilité"
+
