--- a/translations/oe_corporate_blocks-lv.po
+++ b/translations/oe_corporate_blocks-lv.po
@@ -97,41 +97,38 @@ msgstr "Eiropas Datu aizsardzības uzraudzītājs (EDAU)"
 msgid "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=en"
 msgstr "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=lv"
 
-msgid "Sitemap"
-msgstr "Vietnes plāns"
-
-msgid "/european-union/abouteuropa/sitemap_en"
-msgstr "/european-union/abouteuropa/sitemap_lv"
-
 msgid "About this site"
 msgstr "Par šo vietni"
 
-msgid "/european-union/abouteuropa_en"
-msgstr "/european-union/abouteuropa_lv"
+msgid "https://europa.eu/european-union/abouteuropa_en"
+msgstr "https://europa.eu/european-union/abouteuropa_lv"
 
 msgid "Language policy"
 msgstr "Valodu politika"
 
-msgid "/european-union/abouteuropa/language-policy_en"
-msgstr "/european-union/abouteuropa/language-policy_lv"
+msgid "https://europa.eu/european-union/abouteuropa/language-policy_en"
+msgstr "https://europa.eu/european-union/abouteuropa/language-policy_lv"
 
 msgid "Privacy policy"
 msgstr "Privātuma aizsardzība"
 
-msgid "/european-union/abouteuropa/privacy-policy_en"
-msgstr "/european-union/abouteuropa/privacy-policy_lv"
+msgid "https://europa.eu/european-union/abouteuropa/privacy-policy_en"
+msgstr "https://europa.eu/european-union/abouteuropa/privacy-policy_lv"
+
+msgid "https://europa.eu/european-union/brexit-content-disclaimer_en"
+msgstr "https://europa.eu/european-union/brexit-content-disclaimer_lv"
 
 msgid "Legal notice"
 msgstr "Juridisks paziņojums"
 
-msgid "/european-union/abouteuropa/legal_notices_en"
-msgstr "/european-union/abouteuropa/legal_notices_lv"
+msgid "https://europa.eu/european-union/abouteuropa/legal_notices_en"
+msgstr "https://europa.eu/european-union/abouteuropa/legal_notices_lv"
 
 msgid "Cookies"
 msgstr "Sīkdatnes"
 
-msgid "/european-union/abouteuropa/cookies_en"
-msgstr "/european-union/abouteuropa/cookies_lv"
+msgid "https://europa.eu/european-union/abouteuropa/cookies_en"
+msgstr "https://europa.eu/european-union/abouteuropa/cookies_lv"
 
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_lv"
@@ -139,41 +136,131 @@ msgstr "https://ec.europa.eu/info/index_lv"
 msgid "European Commission website"
 msgstr "Eiropas Komisijas tīmekļa vietne"
 
-msgid "Follow the European Commission"
-msgstr "Sekojiet Eiropas Komisijai"
+msgid "This site is managed by the Directorate-General for Communication"
+msgstr "Šo vietni uztur Komunikācijas ģenerāldirektorāts"
+
+msgid "https://ec.europa.eu/info/strategy_en"
+msgstr "https://ec.europa.eu/info/strategy_lv"
+
+msgid "Strategy"
+msgstr "Stratēģija"
+
+msgid "https://ec.europa.eu/info/about-european-commission_en"
+msgstr "https://ec.europa.eu/info/about-european-commission_lv"
+
+msgid "About the European Commission"
+msgstr "Par Eiropas Komisiju"
+
+msgid "https://ec.europa.eu/info/business-economy-euro_en"
+msgstr "https://ec.europa.eu/info/business-economy-euro_lv"
+
+msgid "Business, Economy, Euro"
+msgstr "Uzņēmējdarbība, ekonomika, eiro"
+
+msgid "https://ec.europa.eu/info/live-work-travel-eu_en"
+msgstr "https://ec.europa.eu/info/live-work-travel-eu_lv"
+
+msgid "Live, work, travel in the EU"
+msgstr "Dzīve, darbs un ceļošana ES"
+
+msgid "https://ec.europa.eu/info/law_en"
+msgstr "https://ec.europa.eu/info/law_lv"
+
+msgid "Law"
+msgstr "Tiesību akti"
+
+msgid "https://ec.europa.eu/info/funding-tenders_en"
+msgstr "https://ec.europa.eu/info/funding-tenders_lv"
+
+msgid "Funding, Tenders"
+msgstr "Finansējums un konkursi"
+
+msgid "https://ec.europa.eu/info/research-and-innovation_en"
+msgstr "https://ec.europa.eu/info/research-and-innovation_lv"
+
+msgid "Research and innovation"
+msgstr "Pētniecība un inovācija"
+
+msgid "https://ec.europa.eu/info/energy-climate-change-environment_en"
+msgstr "https://ec.europa.eu/info/energy-climate-change-environment_lv"
+
+msgid "Energy, Climate change, Environment"
+msgstr "Enerģētika, klimata pārmaiņas un apkārtējā vide"
+
+msgid "https://ec.europa.eu/info/education_en"
+msgstr "https://ec.europa.eu/info/education_lv"
+
+msgid "Education"
+msgstr "Izglītība"
+
+msgid "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_en"
+msgstr "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_lv"
+
+msgid "Aid, Development cooperation, Fundamental rights"
+msgstr "Palīdzība, attīstības sadarbība un pamattiesības"
+
+msgid "https://ec.europa.eu/info/food-farming-fisheries_en"
+msgstr "https://ec.europa.eu/info/food-farming-fisheries_lv"
+
+msgid "Food, Farming, Fisheries"
+msgstr "Pārtika, lauksaimniecība, zivsaimniecība"
+
+msgid "https://ec.europa.eu/info/eu-regional-and-urban-development_en"
+msgstr "https://ec.europa.eu/info/eu-regional-and-urban-development_lv"
+
+msgid "EU regional and urban development"
+msgstr "ES reģionālā attīstība un pilsētattīstība"
+
+msgid "https://ec.europa.eu/info/jobs-european-commission_en"
+msgstr "https://ec.europa.eu/info/jobs-european-commission_lv"
+
+msgid "Jobs at the European Commission"
+msgstr "Darbs Eiropas Komisijā"
+
+msgid "https://ec.europa.eu/info/statistics_en"
+msgstr "https://ec.europa.eu/info/statistics_lv"
+
+msgid "Statistics"
+msgstr "Statistika"
+
+msgid "https://ec.europa.eu/commission/presscorner/home/en"
+msgstr "https://ec.europa.eu/commission/presscorner/home/lv"
+
+msgid "News"
+msgstr "Jaunumi"
+
+msgid "https://ec.europa.eu/info/events_en"
+msgstr "https://ec.europa.eu/info/events_lv"
+
+msgid "Events"
+msgstr "Pasākumi"
+
+msgid "https://ec.europa.eu/info/publications_en"
+msgstr "https://ec.europa.eu/info/publications_lv"
+
+msgid "Publications"
+msgstr "Publikācijas"
+
+msgid "https://ec.europa.eu/info/about-european-commission/contact_en"
+msgstr "https://ec.europa.eu/info/about-european-commission/contact_lv"
+
+msgid "Contact the European Commission"
+msgstr "Saziņa ar Eiropas Komisiju"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en#n:+i:4+e:1+t:+s"
 msgstr "https://europa.eu/european-union/contact/social-networks_lv#n:+i:4+e:1+t:+s"
 
-msgid "Other social media"
-msgstr "Citi sociālie tīkli"
-
-msgid "European Union"
-msgstr "Eiropas Savienība"
-
-msgid "https://europa.eu/european-union/about-eu/institutions-bodies_en"
-msgstr "https://europa.eu/european-union/about-eu/institutions-bodies_lv"
-
-msgid "EU institutions"
-msgstr "ES iestādēm"
-
-msgid "https://europa.eu/european-union/index_en"
-msgstr "https://europa.eu/european-union/index_lv"
-
-msgid "https://ec.europa.eu/info/about-commissions-new-web-presence_en"
-msgstr "https://ec.europa.eu/info/about-commissions-new-web-presence_lv"
-
-msgid "About the Commission's new web presence"
-msgstr "Par Komisijas jauno tīmekļa vietni"
-
-msgid "https://ec.europa.eu/info/language-policy_en"
-msgstr "https://ec.europa.eu/info/language-policy_lv"
+msgid "Follow the European Commission on social media"
+msgstr "Sekojiet Eiropas Komisijai sociālajos medijos"
 
 msgid "https://ec.europa.eu/info/resources-partners_en"
-msgstr "http://ec.europa.eu/info/resources-partners_lv"
+msgstr "https://ec.europa.eu/info/resources-partners_lv"
 
 msgid "Resources for partners"
 msgstr "Resursi partneriem"
+
+msgid "https://ec.europa.eu/info/language-policy_en"
+msgstr "https://ec.europa.eu/info/language-policy_lv"
 
 msgid "https://ec.europa.eu/info/cookies_en"
 msgstr "https://ec.europa.eu/info/cookies_lv"
@@ -184,11 +271,9 @@ msgstr "https://ec.europa.eu/info/privacy-policy_lv"
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_lv"
 
-msgid "https://ec.europa.eu/info/contact_en"
-msgstr "https://ec.europa.eu/info/contact_lv"
+msgid "https://ec.europa.eu/info/brexit-content-disclaimer_en"
+msgstr "https://ec.europa.eu/info/brexit-content-disclaimer_lv"
 
-msgid "Contact"
-msgstr "Kontakti"
+msgid "Brexit content disclaimer"
+msgstr "“Brexit” atruna"
 
-msgid "Policies, information and services"
-msgstr "Politikas jomas, informācija un dienesti"
