--- a/translations/oe_corporate_blocks-mt.po
+++ b/translations/oe_corporate_blocks-mt.po
@@ -97,38 +97,35 @@ msgstr "Kontrollur Ewropew għall-Protezzjoni tad-Data (KEPD)"
 msgid "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=en"
 msgstr "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=mt"
 
-msgid "Sitemap"
-msgstr "Mappa tas-sit"
-
-msgid "/european-union/abouteuropa/sitemap_en"
-msgstr "/european-union/abouteuropa/sitemap_mt"
-
 msgid "About this site"
 msgstr "Dwar dan is-sit"
 
-msgid "/european-union/abouteuropa_en"
-msgstr "/european-union/abouteuropa_mt"
+msgid "https://europa.eu/european-union/abouteuropa_en"
+msgstr "https://europa.eu/european-union/abouteuropa_mt"
 
 msgid "Language policy"
 msgstr "Politika dwar il-lingwa"
 
-msgid "/european-union/abouteuropa/language-policy_en"
-msgstr "/european-union/abouteuropa/language-policy_mt"
+msgid "https://europa.eu/european-union/abouteuropa/language-policy_en"
+msgstr "https://europa.eu/european-union/abouteuropa/language-policy_mt"
 
 msgid "Privacy policy"
 msgstr "Politika ta’ privatezza"
 
-msgid "/european-union/abouteuropa/privacy-policy_en"
-msgstr "/european-union/abouteuropa/privacy-policy_mt"
+msgid "https://europa.eu/european-union/abouteuropa/privacy-policy_en"
+msgstr "https://europa.eu/european-union/abouteuropa/privacy-policy_mt"
 
 msgid "Legal notice"
 msgstr "Avviż legali"
 
-msgid "/european-union/abouteuropa/legal_notices_en"
-msgstr "/european-union/abouteuropa/legal_notices_mt"
+msgid "https://europa.eu/european-union/abouteuropa/legal_notices_en"
+msgstr "https://europa.eu/european-union/abouteuropa/legal_notices_mt"
 
-msgid "/european-union/abouteuropa/cookies_en"
-msgstr "/european-union/abouteuropa/cookies_mt"
+msgid "https://europa.eu/european-union/brexit-content-disclaimer_en"
+msgstr "https://europa.eu/european-union/brexit-content-disclaimer_mt"
+
+msgid "https://europa.eu/european-union/abouteuropa/cookies_en"
+msgstr "https://europa.eu/european-union/abouteuropa/cookies_mt"
 
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_mt"
@@ -136,41 +133,131 @@ msgstr "https://ec.europa.eu/info/index_mt"
 msgid "European Commission website"
 msgstr "Is-sit web tal-Kummissjoni Ewropea"
 
-msgid "Follow the European Commission"
-msgstr "Segwi l-Kummissjoni Ewropea"
+msgid "This site is managed by the Directorate-General for Communication"
+msgstr "Dan is-sit huwa ġestit mid-Direttorat Ġenerali għall-Komunikazzjoni"
+
+msgid "https://ec.europa.eu/info/strategy_en"
+msgstr "https://ec.europa.eu/info/strategy_mt"
+
+msgid "Strategy"
+msgstr "Strateġija"
+
+msgid "https://ec.europa.eu/info/about-european-commission_en"
+msgstr "https://ec.europa.eu/info/about-european-commission_mt"
+
+msgid "About the European Commission"
+msgstr "Dwar il-Kummissjoni Ewropea"
+
+msgid "https://ec.europa.eu/info/business-economy-euro_en"
+msgstr "https://ec.europa.eu/info/business-economy-euro_mt"
+
+msgid "Business, Economy, Euro"
+msgstr "Negozju, Ekonomija, Euro"
+
+msgid "https://ec.europa.eu/info/live-work-travel-eu_en"
+msgstr "https://ec.europa.eu/info/live-work-travel-eu_mt"
+
+msgid "Live, work, travel in the EU"
+msgstr "Għajxien, Xogħol, Ivvjaġġar fl-UE"
+
+msgid "https://ec.europa.eu/info/law_en"
+msgstr "https://ec.europa.eu/info/law_mt"
+
+msgid "Law"
+msgstr "Liġi"
+
+msgid "https://ec.europa.eu/info/funding-tenders_en"
+msgstr "https://ec.europa.eu/info/funding-tenders_mt"
+
+msgid "Funding, Tenders"
+msgstr "Finanzjament, Offerti"
+
+msgid "https://ec.europa.eu/info/research-and-innovation_en"
+msgstr "https://ec.europa.eu/info/research-and-innovation_mt"
+
+msgid "Research and innovation"
+msgstr "Riċerka u innovazzjoni"
+
+msgid "https://ec.europa.eu/info/energy-climate-change-environment_en"
+msgstr "https://ec.europa.eu/info/energy-climate-change-environment_mt"
+
+msgid "Energy, Climate change, Environment"
+msgstr "L-Enerġija, it-Tibdil fil-klima, l-Ambjent"
+
+msgid "https://ec.europa.eu/info/education_en"
+msgstr "https://ec.europa.eu/info/education_mt"
+
+msgid "Education"
+msgstr "L-edukazzjoni"
+
+msgid "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_en"
+msgstr "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_mt"
+
+msgid "Aid, Development cooperation, Fundamental rights"
+msgstr "Għajnuna, Kooperazzjoni għall-iżvilupp, Drittijiet fundamentali"
+
+msgid "https://ec.europa.eu/info/food-farming-fisheries_en"
+msgstr "https://ec.europa.eu/info/food-farming-fisheries_mt"
+
+msgid "Food, Farming, Fisheries"
+msgstr "Ikel, Biedja, Sajd"
+
+msgid "https://ec.europa.eu/info/eu-regional-and-urban-development_en"
+msgstr "https://ec.europa.eu/info/eu-regional-and-urban-development_mt"
+
+msgid "EU regional and urban development"
+msgstr "Żvilupp reġjonali u urban tal-UE"
+
+msgid "https://ec.europa.eu/info/jobs-european-commission_en"
+msgstr "https://ec.europa.eu/info/jobs-european-commission_mt"
+
+msgid "Jobs at the European Commission"
+msgstr "Impjiegi mal-Kummissjoni Ewropea"
+
+msgid "https://ec.europa.eu/info/statistics_en"
+msgstr "https://ec.europa.eu/info/statistics_mt"
+
+msgid "Statistics"
+msgstr "Statistika"
+
+msgid "https://ec.europa.eu/commission/presscorner/home/en"
+msgstr "https://ec.europa.eu/commission/presscorner/home/mt"
+
+msgid "News"
+msgstr "Aħbarijiet"
+
+msgid "https://ec.europa.eu/info/events_en"
+msgstr "https://ec.europa.eu/info/events_mt"
+
+msgid "Events"
+msgstr "Avvenimenti"
+
+msgid "https://ec.europa.eu/info/publications_en"
+msgstr "https://ec.europa.eu/info/publications_mt"
+
+msgid "Publications"
+msgstr "Pubblikazzjonijiet"
+
+msgid "https://ec.europa.eu/info/about-european-commission/contact_en"
+msgstr "https://ec.europa.eu/info/about-european-commission/contact_mt"
+
+msgid "Contact the European Commission"
+msgstr "Ikkuntattja l-Kummissjoni Ewropea"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en#n:+i:4+e:1+t:+s"
 msgstr "https://europa.eu/european-union/contact/social-networks_mt#n:+i:4+e:1+t:+s"
 
-msgid "Other social media"
-msgstr "Netwerks soċjali oħrajn"
-
-msgid "European Union"
-msgstr "L-Unjoni Ewropea"
-
-msgid "https://europa.eu/european-union/about-eu/institutions-bodies_en"
-msgstr "https://europa.eu/european-union/about-eu/institutions-bodies_mt"
-
-msgid "EU institutions"
-msgstr "Istituzzjonijiet tal-UE"
-
-msgid "https://europa.eu/european-union/index_en"
-msgstr "https://europa.eu/european-union/index_mt"
-
-msgid "https://ec.europa.eu/info/about-commissions-new-web-presence_en"
-msgstr "https://ec.europa.eu/info/about-commissions-new-web-presence_mt"
-
-msgid "About the Commission's new web presence"
-msgstr "Dwar il-preżenza l-ġdida tal-Kummissjoni fuq il-web"
-
-msgid "https://ec.europa.eu/info/language-policy_en"
-msgstr "https://ec.europa.eu/info/language-policy_mt"
+msgid "Follow the European Commission on social media"
+msgstr "Segwi l-Kummissjoni Ewropea fuq il-media soċjali"
 
 msgid "https://ec.europa.eu/info/resources-partners_en"
-msgstr "http://ec.europa.eu/info/resources-partners_mt"
+msgstr "https://ec.europa.eu/info/resources-partners_mt"
 
 msgid "Resources for partners"
 msgstr "Riżorsi għas-sħab"
+
+msgid "https://ec.europa.eu/info/language-policy_en"
+msgstr "https://ec.europa.eu/info/language-policy_mt"
 
 msgid "https://ec.europa.eu/info/cookies_en"
 msgstr "https://ec.europa.eu/info/cookies_mt"
@@ -181,11 +268,9 @@ msgstr "https://ec.europa.eu/info/privacy-policy_mt"
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_mt"
 
-msgid "https://ec.europa.eu/info/contact_en"
-msgstr "https://ec.europa.eu/info/contact_mt"
+msgid "https://ec.europa.eu/info/brexit-content-disclaimer_en"
+msgstr "https://ec.europa.eu/info/brexit-content-disclaimer_mt"
 
-msgid "Contact"
-msgstr "Kuntatt"
+msgid "Brexit content disclaimer"
+msgstr "Ċaħda dwar il-kontenut tal-Brexit"
 
-msgid "Policies, information and services"
-msgstr "Politiki, informazzjoni u servizzi"
