--- a/translations/oe_corporate_blocks-pt-pt.po
+++ b/translations/oe_corporate_blocks-pt-pt.po
@@ -94,38 +94,35 @@ msgstr "Autoridade Europeia para a Proteção de Dados (AEPD)"
 msgid "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=en"
 msgstr "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=pt"
 
-msgid "Sitemap"
-msgstr "Mapa do sítio"
-
-msgid "/european-union/abouteuropa/sitemap_en"
-msgstr "/european-union/abouteuropa/sitemap_pt"
-
 msgid "About this site"
 msgstr "Acerca deste sítio"
 
-msgid "/european-union/abouteuropa_en"
-msgstr "/european-union/abouteuropa_pt"
+msgid "https://europa.eu/european-union/abouteuropa_en"
+msgstr "https://europa.eu/european-union/abouteuropa_pt"
 
 msgid "Language policy"
 msgstr "Política em matéria de línguas"
 
-msgid "/european-union/abouteuropa/language-policy_en"
-msgstr "/european-union/abouteuropa/language-policy_pt"
+msgid "https://europa.eu/european-union/abouteuropa/language-policy_en"
+msgstr "https://europa.eu/european-union/abouteuropa/language-policy_pt"
 
 msgid "Privacy policy"
 msgstr "Política de privacidade"
 
-msgid "/european-union/abouteuropa/privacy-policy_en"
-msgstr "/european-union/abouteuropa/privacy-policy_pt"
+msgid "https://europa.eu/european-union/abouteuropa/privacy-policy_en"
+msgstr "https://europa.eu/european-union/abouteuropa/privacy-policy_pt"
 
 msgid "Legal notice"
 msgstr "Advertência jurídica"
 
-msgid "/european-union/abouteuropa/legal_notices_en"
-msgstr "/european-union/abouteuropa/legal_notices_pt"
+msgid "https://europa.eu/european-union/abouteuropa/legal_notices_en"
+msgstr "https://europa.eu/european-union/abouteuropa/legal_notices_pt"
 
-msgid "/european-union/abouteuropa/cookies_en"
-msgstr "/european-union/abouteuropa/cookies_pt"
+msgid "https://europa.eu/european-union/brexit-content-disclaimer_en"
+msgstr "https://europa.eu/european-union/brexit-content-disclaimer_pt"
+
+msgid "https://europa.eu/european-union/abouteuropa/cookies_en"
+msgstr "https://europa.eu/european-union/abouteuropa/cookies_pt"
 
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_pt"
@@ -133,41 +130,131 @@ msgstr "https://ec.europa.eu/info/index_pt"
 msgid "European Commission website"
 msgstr "Sítio Web institucional da Comissão Europeia"
 
-msgid "Follow the European Commission"
-msgstr "Siga a Comissão Europeia"
+msgid "This site is managed by the Directorate-General for Communication"
+msgstr "Este sítio é gerido pela Direção-Geral da Comunicação"
+
+msgid "https://ec.europa.eu/info/strategy_en"
+msgstr "https://ec.europa.eu/info/strategy_pt"
+
+msgid "Strategy"
+msgstr "Estratégia"
+
+msgid "https://ec.europa.eu/info/about-european-commission_en"
+msgstr "https://ec.europa.eu/info/about-european-commission_pt"
+
+msgid "About the European Commission"
+msgstr "Sobre a Comissão Europeia"
+
+msgid "https://ec.europa.eu/info/business-economy-euro_en"
+msgstr "https://ec.europa.eu/info/business-economy-euro_pt"
+
+msgid "Business, Economy, Euro"
+msgstr "Negócios, atividade económica, euro"
+
+msgid "https://ec.europa.eu/info/live-work-travel-eu_en"
+msgstr "https://ec.europa.eu/info/live-work-travel-eu_pt"
+
+msgid "Live, work, travel in the EU"
+msgstr "Viver, trabalhar e viajar na UE"
+
+msgid "https://ec.europa.eu/info/law_en"
+msgstr "https://ec.europa.eu/info/law_pt"
+
+msgid "Law"
+msgstr "Legislação"
+
+msgid "https://ec.europa.eu/info/funding-tenders_en"
+msgstr "https://ec.europa.eu/info/funding-tenders_pt"
+
+msgid "Funding, Tenders"
+msgstr "Financiamento, contratos públicos"
+
+msgid "https://ec.europa.eu/info/research-and-innovation_en"
+msgstr "https://ec.europa.eu/info/research-and-innovation_pt"
+
+msgid "Research and innovation"
+msgstr "Investigação e inovação"
+
+msgid "https://ec.europa.eu/info/energy-climate-change-environment_en"
+msgstr "https://ec.europa.eu/info/energy-climate-change-environment_pt"
+
+msgid "Energy, Climate change, Environment"
+msgstr "Energia, alterações climáticas, ambiente"
+
+msgid "https://ec.europa.eu/info/education_en"
+msgstr "https://ec.europa.eu/info/education_pt"
+
+msgid "Education"
+msgstr "Educação"
+
+msgid "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_en"
+msgstr "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_pt"
+
+msgid "Aid, Development cooperation, Fundamental rights"
+msgstr "Ajuda, cooperação para o desenvolvimento, direitos fundamentais"
+
+msgid "https://ec.europa.eu/info/food-farming-fisheries_en"
+msgstr "https://ec.europa.eu/info/food-farming-fisheries_pt"
+
+msgid "Food, Farming, Fisheries"
+msgstr "Alimentação, agricultura, pesca"
+
+msgid "https://ec.europa.eu/info/eu-regional-and-urban-development_en"
+msgstr "https://ec.europa.eu/info/eu-regional-and-urban-development_pt"
+
+msgid "EU regional and urban development"
+msgstr "Desenvolvimento regional e urbano da UE"
+
+msgid "https://ec.europa.eu/info/jobs-european-commission_en"
+msgstr "https://ec.europa.eu/info/jobs-european-commission_pt"
+
+msgid "Jobs at the European Commission"
+msgstr "Trabalhar para a Comissão Europeia"
+
+msgid "https://ec.europa.eu/info/statistics_en"
+msgstr "https://ec.europa.eu/info/statistics_pt"
+
+msgid "Statistics"
+msgstr "Estatísticas"
+
+msgid "https://ec.europa.eu/commission/presscorner/home/en"
+msgstr "https://ec.europa.eu/commission/presscorner/home/pt"
+
+msgid "News"
+msgstr "Notícias"
+
+msgid "https://ec.europa.eu/info/events_en"
+msgstr "https://ec.europa.eu/info/events_pt"
+
+msgid "Events"
+msgstr "Eventos"
+
+msgid "https://ec.europa.eu/info/publications_en"
+msgstr "https://ec.europa.eu/info/publications_pt"
+
+msgid "Publications"
+msgstr "Publicações"
+
+msgid "https://ec.europa.eu/info/about-european-commission/contact_en"
+msgstr "https://ec.europa.eu/info/about-european-commission/contact_pt"
+
+msgid "Contact the European Commission"
+msgstr "Contactar a Comissão Europeia"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en#n:+i:4+e:1+t:+s"
 msgstr "https://europa.eu/european-union/contact/social-networks_pt#n:+i:4+e:1+t:+s"
 
-msgid "Other social media"
-msgstr "Outras redes sociais"
-
-msgid "European Union"
-msgstr "União Europeia"
-
-msgid "https://europa.eu/european-union/about-eu/institutions-bodies_en"
-msgstr "https://europa.eu/european-union/about-eu/institutions-bodies_pt"
-
-msgid "EU institutions"
-msgstr "Instituições da UE"
-
-msgid "https://europa.eu/european-union/index_en"
-msgstr "https://europa.eu/european-union/index_pt"
-
-msgid "https://ec.europa.eu/info/about-commissions-new-web-presence_en"
-msgstr "https://ec.europa.eu/info/about-commissions-new-web-presence_pt"
-
-msgid "About the Commission's new web presence"
-msgstr "Sobre a nova presença da Comissão na Web"
-
-msgid "https://ec.europa.eu/info/language-policy_en"
-msgstr "https://ec.europa.eu/info/language-policy_pt"
+msgid "Follow the European Commission on social media"
+msgstr "Seguir a Comissão Europeia nas redes sociais"
 
 msgid "https://ec.europa.eu/info/resources-partners_en"
-msgstr "http://ec.europa.eu/info/resources-partners_pt"
+msgstr "https://ec.europa.eu/info/resources-partners_pt"
 
 msgid "Resources for partners"
 msgstr "Recursos disponíveis"
+
+msgid "https://ec.europa.eu/info/language-policy_en"
+msgstr "https://ec.europa.eu/info/language-policy_pt"
 
 msgid "https://ec.europa.eu/info/cookies_en"
 msgstr "https://ec.europa.eu/info/cookies_pt"
@@ -178,11 +265,9 @@ msgstr "https://ec.europa.eu/info/privacy-policy_pt"
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_pt"
 
-msgid "https://ec.europa.eu/info/contact_en"
-msgstr "https://ec.europa.eu/info/contact_pt"
+msgid "https://ec.europa.eu/info/brexit-content-disclaimer_en"
+msgstr "https://ec.europa.eu/info/brexit-content-disclaimer_pt"
 
-msgid "Contact"
-msgstr "Contacto"
+msgid "Brexit content disclaimer"
+msgstr "Aviso legal relativo ao Brexit"
 
-msgid "Policies, information and services"
-msgstr "Políticas, informações e serviços"
