--- a/translations/oe_corporate_blocks-sl.po
+++ b/translations/oe_corporate_blocks-sl.po
@@ -91,41 +91,38 @@ msgstr "Evropski nadzornik za varstvo podatkov"
 msgid "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=en"
 msgstr "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=sl"
 
-msgid "Sitemap"
-msgstr "Zemljevid spletišča"
-
-msgid "/european-union/abouteuropa/sitemap_en"
-msgstr "/european-union/abouteuropa/sitemap_sl"
-
 msgid "About this site"
 msgstr "O spletišču"
 
-msgid "/european-union/abouteuropa_en"
-msgstr "/european-union/abouteuropa_sl"
+msgid "https://europa.eu/european-union/abouteuropa_en"
+msgstr "https://europa.eu/european-union/abouteuropa_sl"
 
 msgid "Language policy"
 msgstr "Jezikovna politika"
 
-msgid "/european-union/abouteuropa/language-policy_en"
-msgstr "/european-union/abouteuropa/language-policy_sl"
+msgid "https://europa.eu/european-union/abouteuropa/language-policy_en"
+msgstr "https://europa.eu/european-union/abouteuropa/language-policy_sl"
 
 msgid "Privacy policy"
 msgstr "Politika varstva zasebnost"
 
-msgid "/european-union/abouteuropa/privacy-policy_en"
-msgstr "/european-union/abouteuropa/privacy-policy_sl"
+msgid "https://europa.eu/european-union/abouteuropa/privacy-policy_en"
+msgstr "https://europa.eu/european-union/abouteuropa/privacy-policy_sl"
 
 msgid "Legal notice"
 msgstr "Pravno obvestilo"
 
-msgid "/european-union/abouteuropa/legal_notices_en"
-msgstr "/european-union/abouteuropa/legal_notices_sl"
+msgid "https://europa.eu/european-union/abouteuropa/legal_notices_en"
+msgstr "https://europa.eu/european-union/abouteuropa/legal_notices_sl"
+
+msgid "https://europa.eu/european-union/brexit-content-disclaimer_en"
+msgstr "https://europa.eu/european-union/brexit-content-disclaimer_sl"
 
 msgid "Cookies"
 msgstr "Piškotki"
 
-msgid "/european-union/abouteuropa/cookies_en"
-msgstr "/european-union/abouteuropa/cookies_sl"
+msgid "https://europa.eu/european-union/abouteuropa/cookies_en"
+msgstr "https://europa.eu/european-union/abouteuropa/cookies_sl"
 
 msgid "European Commission"
 msgstr "Evropska komisija"
@@ -136,41 +133,131 @@ msgstr "https://ec.europa.eu/info/index_sl"
 msgid "European Commission website"
 msgstr "Spletišče Evropske komisije"
 
-msgid "Follow the European Commission"
-msgstr "Spremljajte Evropsko komisijo"
+msgid "This site is managed by the Directorate-General for Communication"
+msgstr "To spletišče upravlja Generalni direktorat za komuniciranje"
+
+msgid "https://ec.europa.eu/info/strategy_en"
+msgstr "https://ec.europa.eu/info/strategy_sl"
+
+msgid "Strategy"
+msgstr "Strategija"
+
+msgid "https://ec.europa.eu/info/about-european-commission_en"
+msgstr "https://ec.europa.eu/info/about-european-commission_sl"
+
+msgid "About the European Commission"
+msgstr "O Evropski komisiji"
+
+msgid "https://ec.europa.eu/info/business-economy-euro_en"
+msgstr "https://ec.europa.eu/info/business-economy-euro_sl"
+
+msgid "Business, Economy, Euro"
+msgstr "Podjetništvo, gospodarstvo, evro"
+
+msgid "https://ec.europa.eu/info/live-work-travel-eu_en"
+msgstr "https://ec.europa.eu/info/live-work-travel-eu_sl"
+
+msgid "Live, work, travel in the EU"
+msgstr "Življenje, delo, potovanje v EU"
+
+msgid "https://ec.europa.eu/info/law_en"
+msgstr "https://ec.europa.eu/info/law_sl"
+
+msgid "Law"
+msgstr "Zakonodaja"
+
+msgid "https://ec.europa.eu/info/funding-tenders_en"
+msgstr "https://ec.europa.eu/info/funding-tenders_sl"
+
+msgid "Funding, Tenders"
+msgstr "Financiranje, javna naročila"
+
+msgid "https://ec.europa.eu/info/research-and-innovation_en"
+msgstr "https://ec.europa.eu/info/research-and-innovation_sl"
+
+msgid "Research and innovation"
+msgstr "Raziskave in inovacije"
+
+msgid "https://ec.europa.eu/info/energy-climate-change-environment_en"
+msgstr "https://ec.europa.eu/info/energy-climate-change-environment_sl"
+
+msgid "Energy, Climate change, Environment"
+msgstr "Energija, podnebne spremembe, okolje"
+
+msgid "https://ec.europa.eu/info/education_en"
+msgstr "https://ec.europa.eu/info/education_sl"
+
+msgid "Education"
+msgstr "Izobraževanje"
+
+msgid "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_en"
+msgstr "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_sl"
+
+msgid "Aid, Development cooperation, Fundamental rights"
+msgstr "Pomoč, razvojno sodelovanje, temeljne pravice"
+
+msgid "https://ec.europa.eu/info/food-farming-fisheries_en"
+msgstr "https://ec.europa.eu/info/food-farming-fisheries_sl"
+
+msgid "Food, Farming, Fisheries"
+msgstr "Hrana, kmetijstvo, ribištvo"
+
+msgid "https://ec.europa.eu/info/eu-regional-and-urban-development_en"
+msgstr "https://ec.europa.eu/info/eu-regional-and-urban-development_sl"
+
+msgid "EU regional and urban development"
+msgstr "Razvoj regij in mest v EU"
+
+msgid "https://ec.europa.eu/info/jobs-european-commission_en"
+msgstr "https://ec.europa.eu/info/jobs-european-commission_sl"
+
+msgid "Jobs at the European Commission"
+msgstr "Zaposlitev pri Evropski komisiji"
+
+msgid "https://ec.europa.eu/info/statistics_en"
+msgstr "https://ec.europa.eu/info/statistics_sl"
+
+msgid "Statistics"
+msgstr "Statistika"
+
+msgid "https://ec.europa.eu/commission/presscorner/home/en"
+msgstr "https://ec.europa.eu/commission/presscorner/home/sl"
+
+msgid "News"
+msgstr "Novica"
+
+msgid "https://ec.europa.eu/info/events_en"
+msgstr "https://ec.europa.eu/info/events_sl"
+
+msgid "Events"
+msgstr "Dogodki"
+
+msgid "https://ec.europa.eu/info/publications_en"
+msgstr "https://ec.europa.eu/info/publications_sl"
+
+msgid "Publications"
+msgstr "Publikacije"
+
+msgid "https://ec.europa.eu/info/about-european-commission/contact_en"
+msgstr "https://ec.europa.eu/info/about-european-commission/contact_sl"
+
+msgid "Contact the European Commission"
+msgstr "Kontaktni podatki Evropske komisije"
 
 msgid "https://europa.eu/european-union/contact/social-networks_en#n:+i:4+e:1+t:+s"
 msgstr "https://europa.eu/european-union/contact/social-networks_sl#n:+i:4+e:1+t:+s"
 
-msgid "Other social media"
-msgstr "Druga družbena omrežja"
-
-msgid "European Union"
-msgstr "Evropska unija"
-
-msgid "https://europa.eu/european-union/about-eu/institutions-bodies_en"
-msgstr "https://europa.eu/european-union/about-eu/institutions-bodies_sl"
-
-msgid "EU institutions"
-msgstr "Institucije EU"
-
-msgid "https://europa.eu/european-union/index_en"
-msgstr "https://europa.eu/european-union/index_sl"
-
-msgid "https://ec.europa.eu/info/about-commissions-new-web-presence_en"
-msgstr "https://ec.europa.eu/info/about-commissions-new-web-presence_sl"
-
-msgid "About the Commission's new web presence"
-msgstr "O novi spletni prisotnosti Evropske komisije"
-
-msgid "https://ec.europa.eu/info/language-policy_en"
-msgstr "https://ec.europa.eu/info/language-policy_sl"
+msgid "Follow the European Commission on social media"
+msgstr "Evropska komisija na družbenih medijih"
 
 msgid "https://ec.europa.eu/info/resources-partners_en"
-msgstr "http://ec.europa.eu/info/resources-partners_sl"
+msgstr "https://ec.europa.eu/info/resources-partners_sl"
 
 msgid "Resources for partners"
 msgstr "Viri za partnerje"
+
+msgid "https://ec.europa.eu/info/language-policy_en"
+msgstr "https://ec.europa.eu/info/language-policy_sl"
 
 msgid "https://ec.europa.eu/info/cookies_en"
 msgstr "https://ec.europa.eu/info/cookies_sl"
@@ -181,11 +268,9 @@ msgstr "https://ec.europa.eu/info/privacy-policy_sl"
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_sl"
 
-msgid "https://ec.europa.eu/info/contact_en"
-msgstr "https://ec.europa.eu/info/contact_sl"
+msgid "https://ec.europa.eu/info/brexit-content-disclaimer_en"
+msgstr "https://ec.europa.eu/info/brexit-content-disclaimer_sl"
 
-msgid "Contact"
-msgstr "Kontakt"
+msgid "Brexit content disclaimer"
+msgstr "Izjava o omejitvi odgovornosti – brexit"
 
-msgid "Policies, information and services"
-msgstr "Politike, informacije in službe"
